Clean up scopes